[project]
name = "soat.eleven.fastfood.pagamento"
version = "0.1.0"
description = "Microservice for payment management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.4",
    "redis>=7.1.0",
]
