[project]
name = "soat.eleven.fastfood.pagamento"
version = "0.1.0"
description = "Microservice for payment management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.20.0",
    "azure-keyvault-secrets>=4.9.0",
    "faker>=38.2.0",
    "fastapi[standard]>=0.122.0",
    "loguru>=0.7.3",
    "mercadopago>=2.3.0",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytomlpp>=1.1.0",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "ruff>=0.14.6",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
lint = "ruff check src --fix && black src && isort src"
typecheck = "pyright src"
run_dev = "fastapi dev src/main.py"
test = "pytest src/tests/ -v --cov=src --cov-report=xml --cov-report=html --cov-report=term"
test_watch = "pytest src/tests/ -v --cov=src --cov-report=term --watch"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["soat.eleven.fastfood.pagamento"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/main.py",
    "*/providers/*",
    "*/adapters/*",
    "*/enums/*",
    "*/dtos/*",
    "*/exceptions/*",
    "*/decorators/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
